some basic stuff added

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.6",
         "webklex/laravel-imap": "^1.2"
     },
     "require-dev": {
@@ -24,7 +25,8 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Jo\\": "jo/"
         }
     },
     "autoload-dev": {
