--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.6",
-        "webklex/laravel-imap": "^1.2"
+        "webklex/laravel-imap": "^1.2",
+        "zendframework/zend-feed": "^2.10"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
