--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,15 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "ddeboer/imap": "^1.5",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.6",
+        "php-imap/php-imap": "^3.0",
+        "ssilence/php-imap-client": "dev-master",
+        "tedivm/fetch": "^0.7.1",
         "webklex/laravel-imap": "^1.2",
         "zendframework/zend-feed": "^2.10"
     },
