--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "ddeboer/imap": "^1.5",
         "fideloper/proxy": "^4.0",
+        "gabrielelana/byte-units": "^0.5.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
