--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "akaunting/setting": "^1.0",
         "ddeboer/imap": "^1.5",
         "fideloper/proxy": "^4.0",
         "gabrielelana/byte-units": "^0.5.0",
